@@ -4,6 +4,8 @@ Changes to Version 3.0-8
   
   o New strings2factors() function to convert character variables in a data frame to factors.
   
+  o Added data.frame method for S().
+  
   o Fixed a big in estimateTransform.lm that returned the correct answer with a unneeded warning.
   
   o Fixed Anova.coxph() to handle weights properly (problem reported by Daniel Morillo Cuadrado).
